--- a/Productos/Miel.html
+++ b/Productos/Miel.html
@@ -99,7 +99,7 @@
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="960" data-image-height="1280" src="../images/81719c60a4680511ef86d8d2b380abad3d0f6f1e994482f6a8709099a6dc246aff0f493232813cee044ab810fb4339bdaad78e831e2b1317af1d8e_1280.jpg">
                 <h3 class="u-text u-text-default u-text-1">Sample Headline</h3>
                 <p class="u-text u-text-2">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
-                <a href="" class="u-active-none u-border-2 u-border-hover-palette-2-base u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-light-1 u-btn u-button-style u-hover-none u-none u-text-body-color u-btn-1"> Desctipción</a>
+                <a href="" class="u-active-none u-border-2 u-border-hover-palette-2-base u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-light-1 u-btn u-button-style u-hover-none u-none u-text-body-color u-btn-1"></a>
                 <a href="" class="u-active-none u-border-2 u-border-hover-palette-2-base u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-light-1 u-btn u-button-style u-hover-none u-none u-text-body-color u-btn-2"> Agregar&nbsp;<span class="u-file-icon u-icon u-icon-1"><img src="../images/5465858.png" alt=""></span>&nbsp;
                 </a>
               </div>
@@ -109,7 +109,7 @@
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="900" data-image-height="675" src="../images/miel.jpg">
                 <h3 class="u-text u-text-default u-text-3">Sample Headline</h3>
                 <p class="u-text u-text-4">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
-                <a href="" class="u-active-none u-border-2 u-border-hover-palette-2-base u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-light-1 u-btn u-button-style u-hover-none u-none u-text-body-color u-btn-3"> Desctipción</a>
+                <a href="" class="u-active-none u-border-2 u-border-hover-palette-2-base u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-light-1 u-btn u-button-style u-hover-none u-none u-text-body-color u-btn-3"></a>
                 <a href="" class="u-active-none u-border-2 u-border-hover-palette-2-base u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-light-1 u-btn u-button-style u-hover-none u-none u-text-body-color u-btn-4"> Agregar&nbsp;<span class="u-file-icon u-icon u-icon-2"><img src="../images/5465858.png" alt=""></span>&nbsp;
                 </a>
               </div>
@@ -119,7 +119,7 @@
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="1280" data-image-height="857" src="../images/54adbeff14f21a87228192cacebd7f8c4e2334cb850873ecbc234abb1cd67b4424d15fc72793feeb611f21ec36e1c25e338f690b28255437ab8bb4_1280.jpg">
                 <h3 class="u-text u-text-default u-text-5">Sample Headline</h3>
                 <p class="u-text u-text-6">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
-                <a href="" class="u-active-none u-border-2 u-border-hover-palette-2-base u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-light-1 u-btn u-button-style u-hover-none u-none u-text-body-color u-btn-5"> Desctipción</a>
+                <a href="" class="u-active-none u-border-2 u-border-hover-palette-2-base u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-light-1 u-btn u-button-style u-hover-none u-none u-text-body-color u-btn-5"></a>
                 <a href="" class="u-active-none u-border-2 u-border-hover-palette-2-base u-border-no-left u-border-no-right u-border-no-top u-border-palette-2-light-1 u-btn u-button-style u-hover-none u-none u-text-body-color u-btn-6"> Agregar&nbsp;<span class="u-file-icon u-icon u-icon-3"><img src="../images/5465858.png" alt=""></span>&nbsp;
                 </a>
               </div>
